--- a/styles/css/calculator.css
+++ b/styles/css/calculator.css
@@ -363,8 +363,19 @@ nav {
     font-size: 6px;
     color: rgba(248, 174, 1, 0.746);
   }
+}
 
   .disclaimer {
-    margin: 0;
+    display: none;
   }
-}
+  
+  .footer-comment-box {
+    background-color: #f2f2f2;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-comment-box:hover {
+    background-color: #e0e0e0;
+  }
+  
