--- a/styles/css/calculator.css
+++ b/styles/css/calculator.css
@@ -178,6 +178,7 @@ input {
   flex-wrap: wrap;
   height: auto;
   color: azure;
+  position: relative;
 }
 
 
@@ -393,31 +394,15 @@ nav {
   background-color: #e0e0e0;
 }
 
-#svg-container {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  height: 50%; /* Adjust to fit SVG */
-  width: 80%; /* Adjust to fit SVG */
-  margin: auto auto; /* Modified to center container */
-  padding: 0; /* No padding */
-  border: none; /* No visible border */
+#renderer-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-#svg-container svg {
-  max-width: 100%;
-  max-height: 100%;
-}
+#renderer-container canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 
-#svg-container rect {
-  stroke: #ffffff;
-  stroke-width: 1px;  
-  filter: url(#dropshadow);
-}
-
-#svg-container text {
-  fill: white;
-  font-size: 18px;
-  text-anchor: middle;
-  filter: url(#textshadow);
 }
