--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -84,7 +84,7 @@ button:hover {
 #svg-container {
     width: 100%;
     height: 400px;
-    background: #ccc;
+    background: #ffffff;
     border-radius: 5px;
     margin-bottom: 1em;
     display: flex;
