--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -156,42 +156,39 @@ button#save-room {
 .dropdown-brand, .dropdown-model {
     position: relative;
     display: inline-block;
-    width: 200px; /* Adjust the width of the dropdown button */
+    width: 100%; /* Adjust the width of the dropdown button */
 }
 
 .dropdown-button {
     padding: 10px; /* Adjust the padding around the dropdown button text */
     width: 100%; /* Fill the width of the dropdown container */
-    text-align: left; /* Align the text to the left */
+    text-align: center; /* Align the text to the left */
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    width: 100%; /* Make the dropdown content the same width as the button */
-    box-sizing: border-box; /* Include padding and border in element's total width and height */
-    z-index: 1;
+    background-color: #f9f9f9; /* Light background */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); /* Add a shadow for a "floating" effect */
+    padding: 12px 16px; /* Add some padding to the dropdown content */
+    z-index: 1; /* Ensure the dropdown appears above other content */
 }
 
-.dropdown-content .dropdown-item {
-    color: rgb(0, 0, 0);
-    padding: 5px 5px; /* Reduce padding around each dropdown item */
-    text-decoration: none;
-    display: flex; /* Use flex layout for better control of item content */
-    align-items: center; /* Vertically center the text and the image */
+.dropdown-item {
+    color: #333; /* Darker text color */
+    padding: 5px 0; /* Add some vertical padding to each item */
+    margin: 5px 0; /* Add some vertical margin to each item */
+    display: flex;
+    align-items: center;
+    cursor: pointer; /* Change the cursor to a pointer when hovering over an item */
 }
 
-.dropdown-content .dropdown-item img {
-    width: 50px; /* Reduce the width of the brand logos */
-    height: auto; /* Adjust the height of the brand logos */
-    margin-right: 40px; /* Reduce space between the logo and the text */
+.dropdown-item:hover {
+    background-color: #ddd; /* Light background on hover */
 }
 
-.dropdown-content .dropdown-item:hover {
-    background-color: #000000;
+.dropdown-item img {
+    width: 100%; /* Adjust as needed */
+    height: auto;
+    margin-right: 10px; /* Space between the image and the text */
 }
 
-.dropdown-brand:hover .dropdown-content,
-.dropdown-model:hover .dropdown-content {
-    display: block;
-}
+
