--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -126,13 +126,13 @@ button:hover {
     display: inline-block;
     margin-top: 1em;
     padding: 1em;
-    background-color: #04080a;
+    background-color: #09cadc;
     color: #ffffff;
-    border-radius: 5px;
+    border-radius: 100px;
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 100%;
+    width: 50%;
     /* Adjust this according to your needs */
 }
 
@@ -151,25 +151,10 @@ button#save-room {
     display: none;
 }
 
-#dropdown-content,
-#dropdown-model {
-    display: none;
-}
 
-.dropdown-content {
+.dropdown-model, .dropdown-brand {
 
-    display: none;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    /* Ensure the dropdown appears above other content */
-
-}
-
-.dropdown-model {
-
-    background-color: #f9f9f9;
+    background-color: #f5f5f5;;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
@@ -185,8 +170,23 @@ button#save-room {
     /* Align the text to the left */
 }
 
+.dropdown-content {
+
+    display: none;
+    background-color: #ffffff;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    align-items: center;
+    cursor: pointer;
+    margin: 5px 5px ;
+    border: #09cadc;
+    /* Ensure the dropdown appears above other content */
+
+}
+
 .dropdown-item {
-    color: #333;
+    color: #ffffff;
     /* Darker text color */
     padding: 5px 0;
     /* Add some vertical padding to each item */
@@ -207,6 +207,25 @@ button#save-room {
     width: 100%;
     /* Adjust as needed */
     height: auto;
-    margin-right: 10px;
+    margin-right: 100px;
     /* Space between the image and the text */
+}
+
+div[data-value] {
+    padding: 10px;
+    color: #333;
+    display: flex;
+    justify-content: center; 
+    cursor: pointer;
+}
+
+div[data-value]:hover {
+    background-color: #ddd;
+}
+
+div[data-value] img {
+    vertical-align: middle; /* Vertically aligns the image with the text */
+    width: auto; /* Adjust as needed */
+    height: auto;
+    margin-right: 300px; /* Space between the image and the text */
 }
