--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.5;
     color: #383535;
     background-color: #f5f5f5;
-    padding: 1em;
+    padding: 1em;    
 }
 
 header {
@@ -41,7 +41,7 @@ p {
 .input-group {
     display: flex;
     flex-direction: column;
-    width: 48%;
+    width: 40%;
     margin-bottom: 1em;
 }
 
@@ -61,7 +61,7 @@ label {
 button {
     background-color: #008CBA;
     color: #ffffff;
-    padding: 2em;
+    padding: 1em;
     font-size: 1em;
     border: none;
     border-radius: 100px;
@@ -90,7 +90,7 @@ button:hover {
     height: 600px;
     background: #ffffff;
     border-radius: 5px;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     display: flex;
     /* Make this a flex container */
     justify-content: center;
@@ -123,7 +123,8 @@ button:hover {
 }
 
 #saved-rooms .saved-room {
-    display: inline-block;
+    display: inline-flex;
+    justify-content: space-between;
     margin-top: 1em;
     padding: 1em;
     background-color: #09cadc;
@@ -229,3 +230,7 @@ div[data-value] img {
     height: auto;
     margin-right: 300px; /* Space between the image and the text */
 }
+
+.saved-room {   
+    align-items: right;
+  }
