--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -255,3 +255,32 @@ div[data-value] img {
     display: flex;
     flex-direction: column;
 }
+
+.custom-file-upload {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    border: 2px solid #4CAF50;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+#custom-button {
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+#custom-button:hover {
+    background-color: #45a049;
+}
+
+#custom-text {
+    margin-left: 10px;
+    word-break: break-all;
+    flex-grow: 1;
+}
