--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -16,7 +16,7 @@ body {
 header {
     padding: 2em;
     text-align: center;
-    background-color: #008CBA;
+    background-color: #01526d;
     color: #ffffff;
     border-radius: 10px;
     margin-bottom: 1em;
@@ -49,7 +49,7 @@ input,
 select {
     padding: 0.5em;
     font-size: 1em;
-    border: 2px solid #008CBA;
+    border: 2px solid #01526d;;
     border-radius: 50px;
 }
 
@@ -59,7 +59,7 @@ label {
 }
 
 button {
-    background-color: #008CBA;
+    background-color: #01526d;;
     color: #ffffff;
     padding: 1em;
     font-size: 1em;
@@ -74,7 +74,7 @@ button {
 }
 
 button:hover {
-    background-color: #007B9A;
+    background-color: #38a5ff;
 }
 
 
@@ -89,6 +89,7 @@ button:hover {
     width: 100%;
     height: 600px;
     background: #ffffff;
+    border: 2px solid #000000;
     border-radius: 5px;
     margin-bottom: 2em;
     display: flex;
@@ -107,8 +108,6 @@ button:hover {
 #saved-rooms {
     display: inline-block;
     padding: 1em;
-    background-color: #ffffff;
-    color: #000000;
     border-radius: 5px;
     margin-top: 1em;
     text-align: center;
@@ -127,7 +126,7 @@ button:hover {
     justify-content: space-between;
     margin-top: 1em;
     padding: 1em;
-    background-color: #09cadc;
+    background-color: #079fad;
     color: #ffffff;
     border-radius: 100px;
     text-align: center;
@@ -138,24 +137,13 @@ button:hover {
 }
 
 #saved-rooms .room:hover {
-    background-color: #007B9A;
+    background-color: #065367;
 }
 
 table,
 td {
     display: none;
 
-}
-
-.dropdown-model,
-.dropdown-brand {
-
-    background-color: #f5f5f5;
-    ;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    /* Ensure the dropdown appears above other content */
 }
 
 .dropdown-button {
@@ -167,7 +155,8 @@ td {
     /* Align the text to the left */
 }
 
-.dropdown-content {
+.dropdown-content-brand,
+.dropdown-content-model {
 
     display: none;
     background-color: #ffffff;
@@ -178,7 +167,6 @@ td {
     cursor: pointer;
     margin: 5px 5px;
     border: #09cadc;
-    /* Ensure the dropdown appears above other content */
 
 }
 
@@ -200,13 +188,6 @@ td {
     /* Light background on hover */
 }
 
-.dropdown-item img {
-    width: 100%;
-    /* Adjust as needed */
-    height: auto;
-    margin-right: 100px;
-    /* Space between the image and the text */
-}
 
 div[data-value] {
     padding: 10px;
@@ -221,13 +202,11 @@ div[data-value]:hover {
 }
 
 div[data-value] img {
-    vertical-align: middle;
-    /* Vertically aligns the image with the text */
+    vertical-align: text-top;
     width: auto;
-    /* Adjust as needed */
     height: auto;
-    margin-right: 200px;
-    /* Space between the image and the text */
+    margin-right: 100px;    /* Space between the image and the text */
+
 }
 
 /* The Modal */
@@ -247,7 +226,7 @@ div[data-value] img {
 
 /* Modal Content */
 .modal-content {
-    background-color: #fefefe;
+    
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
@@ -262,21 +241,21 @@ div[data-value] img {
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    border: 2px solid #4CAF50;
+    
     padding: 5px;
     box-sizing: border-box;
 }
 
 #custom-button {
     padding: 5px 10px;
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: #067698;
+    
     border: none;
     cursor: pointer;
 }
 
 #custom-button:hover {
-    background-color: #45a049;
+    background-color: #067698;
 }
 
 #custom-text {
