--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -126,7 +126,7 @@ button:hover {
     justify-content: space-between;
     margin-top: 1em;
     padding: 1em;
-    background-color: #079fad;
+    background-color: #38a5ff;
     color: #ffffff;
     border-radius: 100px;
     text-align: center;
