--- a/styles/css/report.css
+++ b/styles/css/report.css
@@ -4,211 +4,257 @@
     padding: 0;
 }
 
-body {
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #383535;
-    background-color: #f5f5f5;
-    padding: 1em;
-}
+@media (min-width: 300px) {
 
-header {
-    padding: 2em;
-    text-align: center;
-    background-color: #01526d;
-    color: #ffffff;
-    border-radius: 10px;
-    margin-bottom: 1em;
-}
+    body {
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        color: #383535;
+        background-color: #f5f5f5;
+        padding: 1em;
+    }
 
-.header-content {
-    font-size: 2em;
-}
+    header {
+        padding: 1em;
+        text-align: center;
+        background-color: #01526d;
+        color: #ffffff;
+        border-radius: 10px;
+        margin-bottom: 1em;
+    }
 
-@media (max-width: 500px) {
     .header-content {
-        font-size: 1.2em;
+        font-size: 1em;
     }
-}
 
-h1 {
-    font-size: 2.5em;
-    margin-bottom: 0.5em;
-}
+    @media (max-width: 1000px) {
+        .header-content {
+            font-size: 1.0em;
+        }
+    }
 
-p {
-    font-size: 1.5em;
-}
+    h1 {
+        font-size: 1.5em;
+        margin-bottom: 0.5em;
+    }
 
-.grid-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-bottom: 1em;
-}
+    p {
+        font-size: 1.5em;
+    }
 
-.input-group {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 1em;
-}
+    .grid-container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 1em;
+    }
 
-@media (min-width: 700px) {
     .input-group {
-        width: 45%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 1em;
     }
-}
 
-input,
-select {
-    padding: 0.5em;
-    font-size: 1em;
-    border: 2px solid #01526d;
-    border-radius: 50px;
-}
+    input,
+    select {
+        padding: 0.5em;
+        font-size: 1em;
+        border: 1px solid #01526d;
+        border-radius: 50px;
+    }
 
-label {
-    margin-bottom: 0.5em;
-    font-weight: bold;
-}
+    label {
+        margin-bottom: 0.3em;
+        font-weight: bold;
+    }
 
-button {
-    background-color: #01526d;
-    color: #ffffff;
-    padding: 1em;
-    font-size: 1em;
-    border: none;
-    border-radius: 100px;
-    cursor: pointer;
-    margin-bottom: 1em;
-    width: 100%;
-    text-align: center;
-}
+    button {
+        background-color: #01526d;
+        color: #ffffff;
+        padding: 1.2em;
+        font-size: 1em;
+        border: none;
+        border-radius: 100px;
+        cursor: pointer;
+        margin-bottom: .5em;
+        width: 100%;
+        text-align: center;
+    }
 
-button:hover {
-    background-color: #38a5ff;
-}
+    button:hover {
+        background-color: #38a5ff;
+    }
 
-#svg-container {
-    width: 100%;
-    height: 500px;
-    background: #ffffff;
-    border: 2px solid #000000;
-    border-radius: 5px;
-    margin-bottom: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    #suggest {
+        display: none;
 
-#saved-rooms {
-    display: inline-block;
-    padding: 1em;
-    border-radius: 5px;
-    margin-top: 1em;
-    text-align: center;
-    width: 100%;
-}
+    }
 
-#saved-rooms .saved-room {
-    display: inline-flex;
-    justify-content: space-between;
-    margin-top: 1em;
-    padding: 1em;
-    background-color: #38a5ff;
-    color: #ffffff;
-    border-radius: 40px;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    width: 30%;
-}
+    #svg-container {
+        width: 100%;
+        height: 400px;
+        background: #ffffff;
+        border: 1px solid #000000;
+        border-radius: 15px;
+        margin-bottom: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-#saved-rooms .room:hover {
-    background-color: #065367;
-}
-.dropdown {
-    padding: 1em;
-    width: 100%;
-}
+    #saved-rooms {
+        display: inline-block;
+        padding: 1em;
+        border-radius: 15px;
+        margin-top: 1em;
+        text-align: center;
+        width: 100%;
+    }
 
-.dropdown-button {
-    padding: 1em;
-    width: 100%;
-    text-align: center;
-}
+    #saved-rooms .saved-room {
+        display: inline-flex;
+        justify-content: center;
+        margin-top: .5em;
+        padding: .3em;
+        background-color: #38a5ff;
+        color: #ffffff;
+        border-radius: 30px;
+        text-align: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        width: 50%;
+    }
 
-.dropdown-content-brand,
-.dropdown-content-model {
-    display: none;
-    background-color: #ffffff;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    align-items: center;
-    cursor: pointer;
-    margin: 5px 5px;
-    border: #09cadc;
-}
+    #saved-rooms .room:hover {
+        background-color: #065367;
+    }
 
-.dropdown-item {
-    color: #ffffff;
-    padding: 5px 0;
-    margin: 5px 0;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
+    .dropdown {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        margin-bottom: 20px;
+    }
 
-.dropdown-item:hover {
-    background-color: #ddd;
-}
+    .dropdown-button {
+        background-color: #007BFF;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        font-size: 16px;
+        border-radius: 5px;
+    }
 
-#modal {
-    display: none;
-    position: static;
-    z-index: 1;
-    padding-top: 10px;
-    width: 100%;
-    flex-direction: column;
-    /* adjust as needed */
-    background-color: rgb(224, 219, 219);
-    background-color: rgba(246, 243, 243, 0.9);
-    border: 1px solid #888;
-    border-radius: 5px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
+    .dropdown-content-brand,
+    .dropdown-content-model {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 100%;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
 
-.modal-content {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;    
-}
+    .dropdown-content-brand div,
+    .dropdown-content-model div {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
 
-.custom-file-upload {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 5px;
-    box-sizing: border-box;
-}
+    #button-container {
+        margin: 20px 0;
+    }
 
-#custom-button {
-    padding: 5px 10px;
-    background-color: #067698;
-    border: none;
-    cursor: pointer;
-}
+    #button-container button,
+    #edit-room,
+    #delete-room,
+    #custom-button {
+        background-color: #007BFF;
+        color: white;
+        padding: 10px 20px;
+        margin-bottom: 10px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: center;
+        font-size: 16px;
+        border-radius: 5px;
+    }
 
-#custom-button:hover {
-    background-color: #067698;
-}
+    #custom-text {
+        margin-top: 10px;
+        font-size: 16px;
+        color: #333;
+    }
 
-#custom-text {
-    margin-left: 10px;
-    word-break: break-all;
-    flex-grow: 1;
+    .custom-file-upload {
+        position: relative;
+        width: 100%;
+    }
+
+    input[type="file"] {
+        display: none;
+    }
+
+    #modal {
+        display: none;
+        position: absolute;
+        top: 190px;
+        z-index: 1;
+        padding-top: 20px;
+        width: 85%;
+        /* adjust as needed */
+        background-color: rgb(224, 219, 219);
+        background-color: rgba(246, 243, 243, 0.9);
+        border: 1px solid #888;
+        border-radius: 5px;
+        box-shadow: 0px 8px 16px 0px rgba(30, 29, 29, 0.2);
+    }
+
+    .modal-content {
+        padding: 20px;
+        display: block;
+        width: 80%;
+        justify-content: space-around;
+        align-items: center;
+
+    }
+
+    .modal-content label {
+        font-family: Arial, sans-serif;
+        color: #333;
+        display: block;
+        margin-bottom: 15px;
+    }
+
+    .modal-content input[type="text"],
+    .modal-content input[type="number"] {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 20px;
+        border: 1px solid #047986;
+        border-radius: 30px;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+    }
+
+    .modal-content input[type="text"]:focus,
+    .modal-content input[type="number"]:focus {
+        outline: none;
+        border-color: #007BFF;
+        box-shadow: 0 0 5px #007BFF;
+    }
+
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
