--- a/styles/css/estimator.css
+++ b/styles/css/estimator.css
@@ -2,36 +2,37 @@ body {
     font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f8f8;
+    background-color: #ffffff;
+
 }
 
-@media (min-width: 300px), (max-width: 760px) {
+@media (min-width: 300px),
+(max-width: 768px) {
 
     .sidebar {
-        width: 100%;
+        width: 98%;
         position: fixed;
-        left: 0;
-        top: 0;
-        background-color: #01526d;
-        padding: 20px;
+        background-color: transparent;
+        padding: 10px;
         box-sizing: border-box;
         display: flex;
-        justify-content: start;
-        align-items: center;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        flex-wrap: inherit;
+        justify-content: flex-end;
+
     }
 
     .sidebar button {
         background-color: #0188a0;
         color: #ffffff;
-        padding: 1.0em;
-        font-size: 1em;
+        padding: .5em;
+        font-size: .5em;
         border: none;
         border-radius: 100px;
         cursor: pointer;
         margin-bottom: .5em;
-        width: 100%;
+        width: 32%;
         text-align: center;
+        justify-content: flex-end;
     }
 
     .sidebar button:hover {
@@ -39,26 +40,35 @@ body {
     }
 
     #room-reports-container {
-        margin-top: 40px;
-        padding: 20px;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 10px;
         overflow-y: auto;
-        width: 100%;
+        width: 95%;
         height: 100%;
-        background-color: #fff;
+        background-color: #ffffff;
         border-radius: 4px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        box-shadow: 0 2px 4px rgb(0, 66, 128);
+
+    }
+
+    #room-reports-container,
+    #quotations-container {
+        display: none;
     }
 
     .room-report {
+
+        margin-top: 30px;
         margin-bottom: 20px;
-        background-color: #fff;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: #ffffff;
         border-radius: 4px;
-        width: 100%;
+        width: 95%;
+
     }
 
     .room-report table {
@@ -66,9 +76,9 @@ body {
         border-collapse: collapse;
         font-size: 11px;
         line-height: normal;
-        
-        background-color: #fff;
-        
+        background-color: #ffffff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
     }
 
     .room-report table th,
@@ -78,6 +88,7 @@ body {
         vertical-align: text-top;
         /* Align the text vertically in the middle */
         border-bottom: 1px solid black;
+        border-top: 1px solid black;
     }
 
     .room-report table th {
@@ -99,28 +110,25 @@ body {
     }
 
     #room-details-container {
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        background-color: #f5f5f5;
-        max-width: 100%;
-        margin: 0 auto;
-    }
-
-    #room-details-container h2 {
-        color: #333;
-        font-size: 24px;
         margin-bottom: 20px;
-        text-align: left;
+        background-color: #ffffff;
+        border-radius: 4px;
+        width: 100%;
+
     }
 
     #room-details-container table {
         width: 100%;
         text-align: left;
+        background-color: #ffffff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-    #room-details-container td {
+    #room-details-container th {
         padding: 5px;
+        background-color: #086fb9;
+        font-weight: bold;
+        color: #ffffff;
     }
 
     .room-length,
@@ -133,6 +141,7 @@ body {
     .luminaire-table {
         width: 70%;
         border-collapse: collapse;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .luminaire-table th,
@@ -142,9 +151,6 @@ body {
         text-align: left;
     }
 
-    .luminaire-table tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
 
     .luminaire-table th {
         padding-top: 12px;
@@ -152,11 +158,35 @@ body {
         text-align: left;
         color: rgb(242, 242, 242);
         font: 1em sans-serif;
-        font-style: oblique;
+        font-style: normal;
     }
 
     .luminaire-table img {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
     }
+
+    #quotations-container {
+        margin-bottom: 20px;
+        background-color: #ffffff;
+        border-radius: 4px;
+        width: 100%;
+
     }
+
+    #quotations-container table {
+        width: 100%;
+        text-align: left;
+        background-color: #ffffff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    #quotations-container th {
+        padding: 5px;
+        background-color: #086fb9;
+
+        color: rgb(242, 242, 242);
+        font: 1em sans-serif;
+        font-style: normal;
+    }
+}
