--- a/styles/css/inspector.css
+++ b/styles/css/inspector.css
@@ -10,7 +10,7 @@
     font-family: 'Arial', sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #383535;
+    color: #6e6a6a;
     background-color: #f5f5f5;
     padding: 1em;
   }
@@ -18,7 +18,7 @@
   header {
     padding: 0.7em;
     text-align: center;
-    background-color: #01526d;
+    background-color: #33065b;
     color: #ffffff;
     border-radius: 10px;
     margin-bottom: 0.5em;
@@ -35,51 +35,59 @@
   }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 1em;
     margin-bottom: 0.5em;
   }
 
-  p {
-    font-size: 1.5em;
-  }
 
   .input-group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
-    margin-bottom: 1em;
-    background-color: #01526d;
+    background-color: #33065b;
     color: #ffffff;
-    padding: 1.0em;
     font-size: 1em;
     border: none;
-    border-radius: 100px;
+    border-radius: 5px;
     cursor: pointer;
-    margin-bottom: .5em;
-    width: 100%;
-
+    margin-bottom: 1em;
+    margin-top: 2em;
   }
 
   input,
   select {
     padding: 0.5em;
     font-size: 1em;
-    border: 1px solid #01526d;
+    border: 1px solid #f5f5f5;
     border-radius: 50px;
-    background-color: #01526d;
-    color: #ffffff;
-    padding: 1.0em;
+    background-color: #5f10a4;
+    color: #fafeff;
+    padding: .5em;
     font-size: 1em;
-    border: none;
-    border-radius: 100px;
     cursor: pointer;
     margin-bottom: .5em;
     width: 100%;
+    justify-content: center;
   }
 
   label {
     margin-bottom: 0.3em;
     font-weight: bold;
+    background-color: #33065b;
+    color: #fafeff;
+    padding: .5em;
+    font-size: 1em;
+    cursor: pointer;
+    margin-bottom: .5em;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .grid-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 1em;
   }
 
   button {
@@ -109,17 +117,17 @@
     justify-content: center;
     margin-top: 0.3em;
     padding: 0.5em;
-    background-color: #38a5ff;
+    background-color: #7206d1;
     color: #ffffff;
     border-radius: 30px;
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 50%;
+    width: 80%;
   }
 
   #saved-rooms .room:hover {
-    background-color: #065367;
+    background-color: #c43cfa;
   }
 
   .dropdown {
