--- a/styles/css/inspector.css
+++ b/styles/css/inspector.css
@@ -18,7 +18,7 @@
   header {
     padding: 0.7em;
     text-align: center;
-    background-color: #33065b;
+    background-color: #036ee0;
     color: #ffffff;
     border-radius: 10px;
     margin-bottom: 0.5em;
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    background-color: #33065b;
+    background-color: #036ee0;
     color: #ffffff;
     font-size: 1em;
     border: none;
@@ -60,7 +60,7 @@
     font-size: 1em;
     border: 1px solid #f5f5f5;
     border-radius: 50px;
-    background-color: #5f10a4;
+    background-color: #036ee0;
     color: #fafeff;
     padding: .5em;
     font-size: 1em;
@@ -73,7 +73,7 @@
   label {
     margin-bottom: 0.3em;
     font-weight: bold;
-    background-color: #33065b;
+    background-color: #036ee0;
     color: #fafeff;
     padding: .5em;
     font-size: 1em;
@@ -91,16 +91,17 @@
   }
 
   button {
-    background-color: #01526d;
-    color: #ffffff;
-    padding: 1.0em;
-    font-size: 1em;
+    background-color: #036ee0;
+    color: white;    
     border: none;
-    border-radius: 100px;
+    border-radius: 100px;    
     cursor: pointer;
-    margin-bottom: .5em;
     width: 100%;
     text-align: center;
+    font-size: 16px;    
+    padding: 1.0em;
+    font-size: 1em;  
+    margin-bottom: .5em;
   }
 
   #saved-rooms {
@@ -117,7 +118,7 @@
     justify-content: center;
     margin-top: 0.3em;
     padding: 0.5em;
-    background-color: #7206d1;
+    background-color: #036ee0;
     color: #ffffff;
     border-radius: 30px;
     text-align: center;
@@ -138,15 +139,17 @@
   }
 
   .dropdown-button {
-    background-color: #007BFF;
-    color: white;
-    padding: 10px 20px;
+    background-color: #036ee0;
+    color: white;    
     border: none;
+    border-radius: 100px;    
     cursor: pointer;
     width: 100%;
     text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
+    font-size: 16px;    
+    padding: 1.0em;
+    font-size: 1em;  
+    margin-bottom: .5em;
   }
 
   .dropdown-content-brand,
@@ -175,16 +178,17 @@
   #edit-room,
   #delete-room,
   #custom-button {
-    background-color: #007BFF;
-    color: white;
-    padding: 10px 20px;
-    margin-bottom: 10px;
+    background-color: #036ee0;
+    color: white;    
     border: none;
+    border-radius: 100px;    
     cursor: pointer;
     width: 100%;
     text-align: center;
-    font-size: 16px;
-    border-radius: 5px;
+    font-size: 16px;    
+    padding: 1.0em;
+    font-size: 1em;  
+    margin-bottom: .5em;
   }
 
   #custom-text {
@@ -222,7 +226,7 @@
     padding: 20px;
     display: block;
     width: 80%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
   }
@@ -257,4 +261,13 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  fieldset {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 20px 0;
+    border-radius: 5px;
+
+  }
+
 }
