--- a/styles/css/inspector.css
+++ b/styles/css/inspector.css
@@ -175,8 +175,6 @@
   }
 
   #button-container button,
-  #edit-room,
-  #delete-room,
   #custom-button {
     background-color: #036ee0;
     color: white;    
@@ -185,10 +183,24 @@
     cursor: pointer;
     width: 100%;
     text-align: center;
-    font-size: 16px;    
+     
     padding: 1.0em;
     font-size: 1em;  
     margin-bottom: .5em;
+  }
+
+  #save-room,
+  #delete-room {
+    background-color: #094c95;
+    color: white;    
+    border: none;
+    border-radius: 50px;    
+    cursor: pointer;
+    width: 70%;
+    text-align: center;   
+    padding: .7em;
+    font-size: .7em;
+    margin-bottom: .7em;
   }
 
   #custom-text {
